<resources>
    <string name="app_name">RussianIdioms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Nameofuser"><b>Имя пользователя</b></string>
    <string name="DicAlphFras"> Словарь фразеологизмов по алфавиту </string>
    <string name="DicThemeFras"> Словарь фразеологизмов по темам </string>
    <string name="PracFras"> Практика по фразеологизмам </string>
    <string name="PraDr"> Практика по древнерусским словам </string>
    <string name="DicThemeDr"> Словарь древнерусских слов по темам </string>
    <string name="DicAlphDr"> Словарь древнерусских слов по алфавиту </string>

    <string name="Greeting"><b>Добро пожаловать!</b></string>
    <string name="Login">Логин </string>
    <string name="Password"> Пароль </string>
    <string name="Into"> Войти </string>
    <string name="Forgot_password"> Забыли пароль? </string>
    <string name="Go_into"><b> Вход </b> </string>
    <string name="Registration"><b> Регистрация </b> </string>

    <string name="DicAlphFrasHead"> <b> Словарь фразеологизмов по алфавиту </b></string>
    <string name="DicThemeFrasHead"> <b> Словарь фразеологизмов по темам  </b></string>
    <string name="PracFrasHead"> <b> Практика по фразеологизмам </b> </string>
    <string name="PraDrHead"> <b> Практика по древнерусским словам </b> </string>
    <string name="DicThemeDrHead"> <b> Словарь древнерусских слов по темам </b> </string>
    <string name="DicAlphDrHead"><b>Словарь древнерусских по алфавиту </b> </string>
    <string name="Element"> Элемент </string>

    <string name="Test1"><b>Тест №1 </b></string>
    <string name="Answer1"> Ответ №1 </string>
    <string name="Answer2"> Ответ №2 </string>
    <string name="Answer3"> Ответ №3 </string>
    <string name="Answer4"> Ответ №4 </string>

    <string name="Start"> Начать </string>
    <string name="ListOfTests"><b> Список тестов </b></string>
    <string name="ThemeOfTest"><b> Тема №1 </b></string>

    <string name="NameOfIdiom"><b> Фразеологизм №1 </b></string>
    <string name="MeaningOfIdiom"><b> Значение фразеологизма </b></string>
    <string name="MeaningOfThisIdiom"> Значение фразеологизма </string>
    <string name="Examples"><b> Примеры употребления </b></string>
    <string name="ExamplesOfThis">Примеры употребления </string>

    <string name="ThemeFromDic"><b> Тема из словаря </b></string>
    <string name="GoToWord"> Перейти </string>



</resources>