<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <View
        android:id="@+id/main_rectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.34"
        android:background="@drawable/rectangle_1_cap"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/main_rectangle"
        app:layout_constraintGuide_percent="0.03"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.02"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintGuide_percent="0.98"
        />


    <ImageView
        android:id="@+id/student"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:src="@drawable/_023992_student_fill_icon"
        app:layout_constraintTop_toBottomOf="@id/topGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintDimensionRatio="1:1"
        />



    <TextView
        android:id="@+id/nameOfUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/Nameofuser"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenRecandBtn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.38"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slAlphFras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/glBetweenRecandBtn1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"

        android:text="@string/DicAlphFras"
        android:textSize="16sp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenBtn1andBt2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.48"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slThemeFras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/glBetweenBtn1andBt2"
        android:background="@drawable/back_for_btn"
        android:text="@string/DicThemeFras"
        android:textSize="16sp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenBtn2andBt3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.58"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PractiseFras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/glBetweenBtn2andBt3"
        android:background="@drawable/back_for_practise_btn"
        android:text="@string/PracFras"
        android:textSize="16sp"
        android:onClick="goToListOfTests"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenBtn3andBt4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.68"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PractiseDr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/glBetweenBtn3andBt4"
        android:background="@drawable/back_for_practise_btn"
        android:text="@string/PraDr"
        android:textSize="16sp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenBtn4andBt5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.78"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slThemeDr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/glBetweenBtn4andBt5"
        android:background="@drawable/back_for_btn"
        android:text="@string/DicThemeDr"
        android:textSize="16sp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBetweenBtn5andBt6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.88"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/slAlphDr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/glBetweenBtn5andBt6"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.07"
        android:text="@string/DicAlphDr"
        android:textSize="16sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>