<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background">


    <View
        android:id="@+id/main_rectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:background="@drawable/rectangle_1_cap"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/main_rectangle"
        app:layout_constraintGuide_percent="0.03"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.97"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.03"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.97"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backFromThisIdiom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_icon"
        app:layout_constraintTop_toBottomOf="@id/topGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintDimensionRatio="1:1"
        />



    <TextView
        android:id="@+id/slAlphFrasHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/NameOfIdiom"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintTop_toBottomOf="@+id/backFromThisIdiom"
        app:layout_constraintBottom_toBottomOf="@+id/main_rectangle"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />

    <View
        android:id="@+id/fill1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@+id/main_rectangle"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />

    <TextView
        android:id="@+id/MeaningOfIdiom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/MeaningOfIdiom"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/fill1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />

    <TextView
        android:id="@+id/MeaningOfThisIdiom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/MeaningOfThisIdiom"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/MeaningOfIdiom"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.29"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />

    <TextView
        android:id="@+id/Examples"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/Examples"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/MeaningOfThisIdiom"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />

    <TextView
        android:id="@+id/ExamplesOfThis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/ExamplesOfThis"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/Examples"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.29"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        />



</androidx.constraintlayout.widget.ConstraintLayout>