<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">


    <View
        android:id="@+id/main_rectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.22"
        android:background="@drawable/rectangle_1_cap"
        ></View>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/main_rectangle"
        app:layout_constraintGuide_percent="0.03"
        ></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_percent="0.03"
        ></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintGuide_percent="0.97"
        ></androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/slAlphFrasHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:text="@string/Test1"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_rectangle"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        ></TextView>

    <View
        android:id="@+id/fill0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/main_rectangle"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <TextView
        android:id="@+id/question1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:text="@string/Test1"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/fill0"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        ></TextView>

    <View
        android:id="@+id/fill1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/question1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <ImageView
        android:id="@+id/q1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:src="@drawable/_023992_student_fill_icon"
        app:layout_constraintTop_toBottomOf="@id/fill1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.38"
        android:background="@drawable/registration_rectangle"
        app:layout_constraintDimensionRatio="1.3:1"
        ></ImageView>

    <View
        android:id="@+id/fill2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/q1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ans1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/fill2"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="10.5:1"
        android:text="@string/Answer1"
        android:textSize="16dp"
        ></androidx.appcompat.widget.AppCompatButton>

    <View
        android:id="@+id/fill3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/ans1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ans2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/fill3"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="10.5:1"
        android:text="@string/Answer2"
        android:textSize="16dp"
        ></androidx.appcompat.widget.AppCompatButton>

    <View
        android:id="@+id/fill4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/ans2"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ans3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/fill4"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="10.5:1"
        android:text="@string/Answer3"
        android:textSize="16dp"
        ></androidx.appcompat.widget.AppCompatButton>

    <View
        android:id="@+id/fill5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|left"
        app:layout_constraintTop_toBottomOf="@+id/ans3"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"

        ></View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ans4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/back_for_btn"
        app:layout_constraintTop_toBottomOf="@id/fill5"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="10.5:1"
        android:text="@string/Answer3"
        android:textSize="16dp"
        ></androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>